# memory-aware-LBM

./: CMakeLists.txt  README  README.md  boundaries.c  boundaries.h  changelog  eval_tools.h  lb.c  lb.h  run_exps.sh  unsteady.c
backup/: Makefile
cmake/: common.cmake
combine/: CMakeLists.txt
combine_openmp/: CMakeLists.txt
combine_openmp_papi/: CMakeLists.txt
combine_papi/: CMakeLists.txt
origin/: CMakeLists.txt
origin_openmp/: CMakeLists.txt
origin_openmp_papi/: CMakeLists.txt
origin_papi/: CMakeLists.txt
panel/: CMakeLists.txt
panel_openmp/: CMakeLists.txt
panel_openmp_papi/: CMakeLists.txt
panel_papi/: CMakeLists.txt
results/: log.sh  summary.txt
scripts/bigred/: 1node.omp.combine.pbs  1node.omp.origin.pbs  1node.omp.pbs  1node.omp.tight.pbs  1node.pbs
scripts/bridges/: 1node.basic.pbs  1node.basic.small.pbs  1node.blk.pbs  1node.blk.small.papi.pbs  1node.blk.small.pbs  1node.papi.pbs  visual.pbs
scripts/bridges/weak/: 1node.weak.1024.pbs  1node.weak.2048.pbs  1node.weak.256.pbs  1node.weak.4096.pbs  1node.weak.512.pbs  1node.weak.5120.pbs  1node.weak.5760.pbs  1node.weak.pbs
tight/: CMakeLists.txt
tight_block/: CMakeLists.txt
tight_block_openmp/: CMakeLists.txt
tight_block_openmp_papi/: CMakeLists.txt
tight_block_papi/: CMakeLists.txt
tight_openmp/: CMakeLists.txt
tight_openmp_papi/: CMakeLists.txt
tight_papi/: CMakeLists.txt
